--- a/app/src/main/res/layout/header_view_layout.xml
+++ b/app/src/main/res/layout/header_view_layout.xml
@@ -2,11 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:background="@drawable/backround3"
+    android:layout_height="200dp"
+    android:gravity="center">
 
     <ImageView
+        android:layout_marginBottom="54dp"
         android:layout_width="wrap_content"
-        android:layout_height="200dp"
+        android:layout_height="140dp"
         android:src="@drawable/thuchi"/>
 
 </LinearLayout>
